# sing-config-gate

./: .env.example  .env.nodes.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bunfig.toml  deploy.ts  package.json  tsconfig.json
db/: schema.d.ts
db/migrations/: 20250720095518_user.ts
rust/: .gitignore  Cargo.toml  README.md
rust/config/: sing-box.template.json
rust/src/: deploy.rs  generate_config.rs
rust/src/adapters/: db.rs
rust/src/db/: enums.rs  schema.rs
rust/src/service/: admin.rs
rust/src/utils/: env.rs
src/: config.rs  deploy.rs  env.ts  errors.rs  gen_node_config.rs  generate_config.rs  ioc.ts  lib.rs  main.rs  main.ts
src/adapters/: db.rs  mod.rs  user_repo.rs  vless_identity_repo.rs
src/adapters/db/: user.repo.ts
src/db/: connect.rs  enums.rs  mod.rs  models.rs  schema.rs
src/db/migrations/00000000000000_create_user/: down.sql  up.sql
src/db/migrations/2026-03-05-183236-0000_init/: down.sql  up.sql
src/deploy/: main.rs
src/domain/: config_generator.rs
src/ports/: mod.rs  user.rs  user.ts  vless_identity.rs
src/service/: admin.rs  admin.ts  handle_msg.rs  handle_msg.ts  mod.rs
src/singbox/: builders.rs  client.rs  mod.rs  server.rs  shared.rs
src/utils/: create-migration.ts  db.ts  env.rs  log.rs  log.ts  logger.rs  migrate.ts  mod.rs  remote_conn.ts  telegram.rs
