[package]
name = "sing-box-config-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Telegram bot
teloxide = { version = "0.17.0", features = ["macros"] }

# Database
diesel = { version = "2.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
base64 = "0.22"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Configuration
dotenvy = "0.15.7"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# HTTP client
reqwest = { version = "0.13.2", features = ["json"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# SSH for deploy utility
ssh2 = "0.9.5"

# URL parsing
url = "2.5.8"

# Random bytes
rand = "0.10.0"
hex = "0.4"

# Time
chrono = "0.4.44"

# UUID generation
uuid = { version = "1.22", features = ["v4"] }

[[bin]]
name = "bot"
path = "src/main.rs"

[[bin]]
name = "gen_node_config"
path = "src/bin/gen_node_config.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy/main.rs"

# Release optimizations for smaller, faster binaries
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
