[package]
name = "sing-box-config-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15.7"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# Release optimizations for smaller, faster binaries
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
